--- a/airflow.cfg
+++ b/airflow.cfg
@@ -59,7 +59,7 @@ plugins_folder = /c/Airflow/plugins
 execute_tasks_new_python_interpreter = False
 
 # Secret key to save connection passwords in the db
-fernet_key = 
+fernet_key = UCdUM_tB1_mi2AguAM-b0vF7T8ac26sttKdppkNSm8Q=
 
 # Whether to disable pickling dags
 donot_pickle = True
